--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/node": "^17.0.35",
     "@types/ws": "^8.5.3",
+    "commander": "^9.2.0",
     "typescript": "^4.7.2"
   },
   "dependencies": {
