--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "async-mutex": "^0.3.2",
     "axios": "^0.27.2",
     "mysql": "^2.18.1",
+    "redis": "^4.3.1",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.8",
     "typeorm": "^0.3.6",
