--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "watch": "tsc -w",
     "start": "tsc && cd dist &&node main.js",
     "migrate": "tsc && node dist/db/migrate.js",
-    "autohost": "tsc && node dist/tests/autohost.test.js"
+    "autohost": "tsc && node dist/tests/autohost.test.js",
+    "dev": "nodemon main.ts"
+
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +17,9 @@
     "@types/node": "^17.0.35",
     "@types/ws": "^8.5.3",
     "commander": "^9.2.0",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.2"
   },
   "dependencies": {
