--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "async-mutex": "^0.3.2",
     "axios": "^0.27.2",
     "mysql": "^2.18.1",
+    "pino": "^8.8.0",
     "redis": "^4.3.1",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.8",
