feat: pretty log to stdout (partial changed)
more details:
- fix: use dotenv to define development environments
- fix: change the absolute path of log file with `path.join`
- pref: categoried `.gitignore` and `.dockerignore`
- pref: count of worker can be set with`process.env.PLASMID_WORKER_POOL_SIZE`, default is `os.cpus().length`
- pref: waiting for workers to be ready
- feat: handle worker errors

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
-node_modules
-dist
+# IDE files
+.vscode/
+.idea/
+.fleet/
+
+# node_modules
+node_modules/
+
+# build files
+dist/
+
+# data and log files
+data/
+log/
