--- a/.dockerignore
+++ b/.dockerignore
@@ -1,2 +1,14 @@
+# IDE files
+.vscode/
+.idea/
+.fleet/
+
+# node_modules
 node_modules/
+
+# build files
 dist/
+
+# data and log files
+data/
+log/
