--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "redis-cli flushall && tsc && cd dist &&node main.js",
     "migrate": "tsc && node dist/db/migrate.js",
     "autohost": "tsc && node dist/tests/autohost.test.js",
-    "dev": "redis-cli flushall; NODE_ENV=development nodemon main.ts",
-    "dev-noflush": "nodemon main.ts",
+    "dev": "redis-cli flushall; dotenv -c development nodemon main.ts",
+    "dev-noflush": "dotenv -c development nodemon main.ts",
     "build": "tsc"
   },
   "author": "",
@@ -18,6 +18,8 @@
     "@types/node": "^17.0.35",
     "@types/ws": "^8.5.3",
     "commander": "^9.2.0",
+    "dotenv": "^16.0.3",
+    "dotenv-cli": "^7.2.1",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
@@ -28,6 +30,7 @@
     "axios": "^0.27.2",
     "mysql": "^2.18.1",
     "pino": "^8.8.0",
+    "pino-pretty": "^10.0.0",
     "redis": "^4.3.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.6",
