--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "index.js",
   "scripts": {
     "watch": "tsc -w",
-    "start": "redis-cli flushall && tsc && cd dist &&node main.js",
-    "migrate": "tsc && node dist/db/migrate.js",
-    "autohost": "tsc && node dist/tests/autohost.test.js",
+    "start": "redis-cli flushall && npm run build && cd dist && node main.js",
+    "migrate": "npm run build && node dist/db/migrate.js",
+    "autohost": "npm run build && node dist/tests/autohost.test.js",
     "dev": "redis-cli flushall; dotenv -c development nodemon main.ts",
     "dev-noflush": "dotenv -c development nodemon main.ts",
-    "build": "tsc",
+    "build": "tsc && tsc-alias",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
@@ -27,6 +27,7 @@
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.6",
     "typescript": "^4.7.2"
   },
   "dependencies": {
