ci: change ci trigger

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,14 +1,7 @@
 name: "Build image and upload to ghcr.io"
 
 on:
-  pull_request:
-    branches:
-      - "main"
-      - "dev"
   push:
-    branches:
-      - "main"
-      - "dev"
     tags:
       - "v*"
     paths-ignore:
@@ -16,7 +9,7 @@ on:
       - ".dockerignore"
       - ".gitignore"
       - ".github/**"
-      - "!.github/workflows/build-image.yaml"
+      - "!.github/workflows/build.yaml"
 
 defaults:
   run:
