--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,19 +1,19 @@
-name: "Build image and upload to ghcr.io"
+name: Build image and upload to ghcr.io
 
 on:
   push:
     tags:
-      - "v*"
+      - 'v*'
     paths-ignore:
-      - "**.md"
-      - ".dockerignore"
-      - ".gitignore"
-      - ".github/**"
-      - "!.github/workflows/build.yaml"
+      - '**.md'
+      - .dockerignore
+      - .gitignore
+      - '.github/**'
+      - '!.github/workflows/build.yaml'
 
 defaults:
   run:
-    shell: "bash"
+    shell: bash
 
 jobs:
   build:
@@ -23,17 +23,17 @@ jobs:
         with:
           submodules: true
 
-      - name: "Docker: Setup Buildx"
+      - name: 'Docker: Setup Buildx'
         uses: docker/setup-buildx-action@v2
 
-      - name: "Docker: Login to GitHub Container Registry"
+      - name: 'Docker: Login to GitHub Container Registry'
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ github.token }}
-  
-      - name: "Docker: Metadata"
+
+      - name: 'Docker: Metadata'
         id: docker-meta
         uses: docker/metadata-action@v4
         with:
@@ -47,7 +47,7 @@ jobs:
             type=ref,event=pr
             type=sha
 
-      - name: "Docker: Build and Push Image"
+      - name: 'Docker: Build and Push Image'
         uses: docker/build-push-action@v3
         with:
           push: true
