--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.6",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^4.7.2"
   }
 }
