--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,6 +22,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: true
+          ref: ${{ github.ref }}
 
       - name: 'Docker: Setup Buildx'
         uses: docker/setup-buildx-action@v2
@@ -33,6 +34,15 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ github.token }}
 
+      - name: Check pre-release
+        id: is_pre_release
+        run: |
+          if [[ $(basename ${{ github.ref }}) =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+            echo prerelease=false | tee -a $GITHUB_OUTPUT
+          else
+            echo prerelease=true | tee -a $GITHUB_OUTPUT
+          fi
+
       - name: 'Docker: Metadata'
         id: docker-meta
         uses: docker/metadata-action@v4
@@ -42,10 +52,8 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
-            type=ref,event=branch,enable=${{ github.ref != format('refs/heads/{0}', 'main') }}
-            type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
-            type=ref,event=pr
-            type=sha
+            type=raw,value=latest,enable=${{ steps.is_pre_release.outputs.prerelease == 'false' }}
+            type=raw,value=nightly,enable=${{ steps.is_pre_release.outputs.prerelease == 'true' }}
 
       - name: 'Docker: Build and Push Image'
         uses: docker/build-push-action@v3
