--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "ts-plasmid",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha.2",
   "description": "",
-  "author": "",
+  "author": {
+    "name": "UltiRTS"
+  },
   "license": "ISC",
   "main": "index.js",
   "scripts": {
